--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,7 @@ repositories {
 }
 
 dependencies {
+
+    compile group: 'org.eclipse.mylyn.github', name: 'org.eclipse.egit.github.core', version: '2.1.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
