--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,10 @@ repositories {
 dependencies {
 
     compile group: 'org.eclipse.mylyn.github', name: 'org.eclipse.egit.github.core', version: '2.1.5'
+    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.10.0.201712302008-r'
+    compile group: 'org.gitlab', name: 'java-gitlab-api', version: '4.0.0'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+
