--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.10.0.201712302008-r'
     compile group: 'org.gitlab', name: 'java-gitlab-api', version: '4.0.0'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
+    compile group: 'com.offbytwo.jenkins', name: 'jenkins-client', version: '0.3.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
