--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
     compile group: 'com.offbytwo.jenkins', name: 'jenkins-client', version: '0.3.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
+    compile group: 'org.json', name: 'json', version: '20180130'
+
+
 }
 
 
