--- a/devops.properties
+++ b/devops.properties
@@ -47,3 +47,6 @@ jenkinsJobUrl=http://10.0.75.1:8080/project/
 
 # Location of Jenkins config file
 jenkinsConfigFileLocation=D:\\jenkins\\config.xml
+
+# Jenkins home directory
+jenkinsHome=C:\\Program Files (x86)\\Jenkins
